# mcp-asc

./: .gitignore  .mcp.json  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release-binaries.yml  release.yml
npm/: install.js  package.json  run.js
python/: pyproject.toml
python/menot_you_mcp_asc/: __init__.py
src/: auth.rs  auth_tests.rs  client.rs  client_endpoints.rs  client_tests.rs  lib.rs  main.rs  tools.rs  tools_tests.rs
src/models/: app.rs  app_tests.rs  ci.rs  ci_tests.rs  common.rs  mod.rs  sales.rs  sales_tests.rs  scm.rs
tests/fixtures/: test-key.p8
