[package]
name = "nott-asc"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
description = "Apple App Store Connect API — MCP server for Xcode Cloud operations (build runs, apps, products, reviews, sales)."
license = "Apache-2.0"
repository = "https://github.com/menot-you/mcp-asc"
homepage = "https://github.com/menot-you/mcp-asc"
readme = "README.md"
keywords = ["mcp", "xcode-cloud", "app-store-connect", "apple", "claude-code"]
categories = ["development-tools", "command-line-utilities"]
exclude = [".github/", "tests/fixtures/", "assets/"]
publish = false  # marketplace-only distribution; binaries via GitHub Release

[lib]
name = "nott_asc"
path = "src/lib.rs"

# Primary MCP server (declared in .mcp.json, baixado pelo install hook).
[[bin]]
name = "nott-asc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
flate2 = "1"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }  # rust_crypto needed for CryptoProvider; RSA compiled but not used (RUSTSEC-2023-0071 — no runtime exposure)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "native-tls"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
flate2 = "1"
tokio-test = "0.4"
wiremock = "0.6"
