[package]
name = "menot-you-mcp-asc"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server for Apple App Store Connect API — Xcode Cloud operations"
license = "AGPL-3.0-or-later"
repository = "https://github.com/menot-you/apple-store-connect"
homepage = "https://github.com/menot-you/apple-store-connect"
readme = "README.md"
keywords = ["mcp", "xcode-cloud", "app-store-connect", "apple", "ci-cd"]
categories = ["development-tools", "command-line-utilities"]
exclude = [".github/", "tests/fixtures/"]

[lib]
name = "asc_mcp"
path = "src/lib.rs"

[[bin]]
name = "asc"
path = "src/main.rs"

[[bin]]
name = "asc-mcp"
path = "src/main.rs"

[[bin]]
name = "apple-store-connect"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
flate2 = "1"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }  # rust_crypto needed for CryptoProvider; RSA compiled but not used (RUSTSEC-2023-0071 — no runtime exposure)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "native-tls"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
flate2 = "1"
tokio-test = "0.4"
wiremock = "0.6"
